--- a/trunk/convert_anything.glade
+++ b/trunk/convert_anything.glade
@@ -13,7 +13,7 @@
       <widget class="GtkVBox" id="main_dialog_vbox">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkVBox" id="vbox">
+          <widget class="GtkVBox" id="vbox_open">
             <property name="visible">True</property>
             <property name="border_width">15</property>
             <property name="spacing">5</property>
@@ -27,6 +27,8 @@
                 <property name="row_spacing">5</property>
                 <child>
                   <widget class="GtkScrolledWindow" id="scrolledwindow1">
+                    <property name="width_request">450</property>
+                    <property name="height_request">250</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -163,7 +165,7 @@
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkExpander" id="expander_subtitledetails">
+                          <widget class="GtkExpander" id="expander_imagedetails">
                             <property name="can_focus">True</property>
                             <child>
                               <widget class="GtkScrolledWindow" id="scrolledwindow4">
@@ -183,9 +185,9 @@
                               </widget>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label_subtitledetails">
+                              <widget class="GtkLabel" id="label_imagedetails">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Subtitle details</property>
+                                <property name="label" translatable="yes">Image details</property>
                               </widget>
                               <packing>
                                 <property name="type">label_item</property>
@@ -219,7 +221,7 @@
                 <child>
                   <widget class="GtkLabel" id="label3">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Video Format   &lt;/b&gt;</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Video Format&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -228,15 +230,8 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkComboBoxEntry" id="combobox_video">
+                  <widget class="GtkComboBox" id="combobox_video">
                     <property name="visible">True</property>
-                    <property name="items" translatable="yes">
-
-</property>
-                    <child internal-child="entry">
-                      <widget class="GtkEntry" id="comboboxentry-entry1">
-                      </widget>
-                    </child>
                   </widget>
                   <packing>
                     <property name="position">1</property>
@@ -271,7 +266,7 @@
                 <child>
                   <widget class="GtkLabel" id="label_outaudio">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Audio Format   &lt;/b&gt;</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Audio Format&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -280,13 +275,9 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkComboBoxEntry" id="combobox_audio">
+                  <widget class="GtkComboBox" id="combobox_audio">
                     <property name="visible">True</property>
                     <property name="items" translatable="yes"></property>
-                    <child internal-child="entry">
-                      <widget class="GtkEntry" id="comboboxentry-entry2">
-                      </widget>
-                    </child>
                   </widget>
                   <packing>
                     <property name="position">1</property>
@@ -315,12 +306,12 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkHBox" id="hbox_subtitle">
+              <widget class="GtkHBox" id="hbox_image">
                 <property name="spacing">10</property>
                 <child>
-                  <widget class="GtkLabel" id="label_outsubtitle">
+                  <widget class="GtkLabel" id="label_outimage">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Subtitle Format&lt;/b&gt;</property>
+                    <property name="label" translatable="yes">&lt;b&gt;Image Format&lt;/b&gt;</property>
                     <property name="use_markup">True</property>
                   </widget>
                   <packing>
@@ -329,20 +320,15 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkComboBoxEntry" id="combobox_subtitle">
+                  <widget class="GtkComboBox" id="combobox_image">
                     <property name="visible">True</property>
-                    <property name="items" translatable="yes"></property>
-                    <child internal-child="entry">
-                      <widget class="GtkEntry" id="comboboxentry-entry3">
-                      </widget>
-                    </child>
                   </widget>
                   <packing>
                     <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkButton" id="button_subtitle">
+                  <widget class="GtkButton" id="button_image">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="label">gtk-preferences</property>
@@ -646,8 +632,8 @@
             <property name="width_request">480</property>
             <property name="height_request">320</property>
             <property name="visible">True</property>
-            <property name="select_multiple">True</property>
             <property name="local_only">False</property>
+            <property name="select_multiple">True</property>
           </widget>
           <packing>
             <property name="position">1</property>
